--- a/src/.prettierrc
+++ b/src/.prettierrc
@@ -1,3 +1,5 @@
 {
-  "semi": true
+  "semi": true,
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "importOrder": ["^@core/(.*)$", "<THIRD_PARTY_MODULES>", "^@/", "^[./]"]
 }
