--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
-	"editor.defaultFormatter": "biomejs.biome",
-	"eslint.validate": ["typescript", "typescriptreact"],
-	"files.eol": "\n",
-	"editor.tabSize": 2,
-	"editor.codeActionsOnSave": {
-		"quickfix.biome": "explicit",
-		"source.organizeImports.biome": "explicit"
-	}
+  "editor.defaultFormatter": "biomejs.biome",
+  "eslint.validate": ["typescript", "typescriptreact"],
+  "files.eol": "\n",
+  "editor.tabSize": 2,
+  "editor.insertSpaces": true,
+  "editor.codeActionsOnSave": {
+    "quickfix.biome": "explicit",
+    "source.organizeImports.biome": "explicit",
+    "source.fixAll.biome": "explicit"
+  }
 }
