chore: formatを修正しないコマンドの追加

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "biome lint --write ./src",
     "format": "biome format ./src --write",
     "check": "biome check --write ./src",
+    "check:only": "biome check ./src",
     "preview": "vite preview"
   },
   "dependencies": {
