--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.82.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
