--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.2.0",
+    "@emotion/react": "^11.13.5",
     "@tanstack/react-router": "^1.82.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
