--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "globals": "^15.11.0",
     "typescript": "~5.6.2",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-tsconfig-paths": "^5.1.3"
   }
 }
