--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@emotion/react": "^11.13.5",
     "@tanstack/react-router": "^1.82.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
