--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/react": "^3.2.0",
     "@emotion/react": "^11.13.5",
     "@tanstack/react-router": "^1.82.2",
+    "@vis.gl/react-google-maps": "^1.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
