--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@chakra-ui/react": "^3.2.0",
     "@emotion/react": "^11.13.5",
+    "@langchain/google-genai": "^0.1.6",
     "@tanstack/react-router": "^1.82.2",
     "@vis.gl/react-google-maps": "^1.4.2",
+    "langchain": "^0.3.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
