--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@tanstack/react-router": "^1.82.2",
     "@vis.gl/react-google-maps": "^1.4.2",
     "langchain": "^0.3.11",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
