--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.2.0",
+    "@chakra-ui/react": "^3.16.1",
     "@emotion/react": "^11.13.5",
     "@langchain/google-genai": "^0.1.6",
     "@tanstack/react-router": "^1.82.2",
     "@vis.gl/react-google-maps": "^1.4.2",
     "langchain": "^0.3.11",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
